# ev-charge-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  lifespan.py
app/routes/: apis.py  routers.py
app/schemas/: chargers.py
app/services/: chargers.py  dependencies.py  redis.py  requests.py
app/utils/: data_handlers.py
