[tool.poetry]
name = "ev-charge-backend"
version = "0.1.0"
description = "전기차G 백엔드"
authors = ["Jungminchae <minchae3618@gmail.com>"]
readme = "README.md"
packages = [{include = "ev_charge_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
